fixed contact form on mobile, fixed scrolling issue

--- a/styles/main.css
+++ b/styles/main.css
@@ -102,13 +102,8 @@ ul li, ul li:hover, .active {
 }
 
 .welcomeDiv h1 {
-	margin-top: 100px;
 	font-size: 90px;
-	font-weight: 700;
-}
-
-.welcomeDiv h1:nth-child(2) {
-		margin-bottom: 100px;
+/*	font-weight: 700;*/
 }
 
 .banner h2 {
@@ -204,6 +199,10 @@ ul li:hover {
 	float: left;
 }
 
+footer {
+	min-height: 40px;
+}
+
 @media (max-width: 767px) {
 
 	.active {
@@ -220,7 +219,7 @@ ul li:hover {
 		font-size: 2em;
 	}
 	.welcomeDiv h1 {
-		margin-top: 20vh;
+/*		margin-top: 20vh;*/
 		font-size: 60px;
 	}
 
